# skill-bill

./: .agnix.toml  .gitattributes  .gitignore  .mailmap  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  config.yaml  install.sh  php_skills.patch  pyproject.toml  uninstall.sh
.agents/: skill-overrides.example.md  skill-overrides.md
.claude-plugin/: plugin.json
.codex/: config.toml
.feature-specs/: zcode-agent-support-investigation.md
.github/: actionlint.yaml
.run/: SkillBill Desktop.run.xml
agent/: decisions.md  history.md
docs/: ROADMAP.md  capabilities.md  external-addons.md  getting-started-for-teams.md  getting-started.md  internal-skills-architecture.md  licensing.md  release-license-approval.md  release-successor-license-approval.md  review-telemetry.md  skill-source-generation.md  team-control-plane-roadmap.md
runtime-kotlin/: .editorconfig  ARCHITECTURE.md  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
scripts/: agent_install_smoke_test.sh  agent_nesting_smoke_test.sh  install_smoke_test.sh  mcp_server_start.sh  migrate_to_content_md.md  migrate_to_content_md.py  review_metrics.py  skill_repo_contracts.md  skill_repo_contracts.py  validate_agent_configs  validate_agent_configs.py  validate_release_ref  verify_release_artifact_licenses
skill_bill/: __init__.py  __main__.py  cli.py  config.py  constants.py  db.py  feature_implement.py  feature_verify.py  install.py  launcher.py  mcp_server.py  mcp_tool_bridge.py  review.py  scaffold.py  scaffold_domain.py  stats.py  (+7 more)
(+3282 files in other folders)
