[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-bill"
version = "0.1.0"
description = "Governed cross-agent skills, workflows, validation, and telemetry for AI-assisted engineering."
requires-python = ">=3.10"
dependencies = ["mcp", "pyyaml>=6"]

[tool.setuptools.packages.find]
include = ["skill_bill*"]
